color contrast fix

--- a/assign6/style.css
+++ b/assign6/style.css
@@ -30,7 +30,7 @@ h1, h2 {
   }
   
   em {
-    color: pink;
+    color: red;
   }
 
   div{
